public/styles.css
html {
  font-size: 3rem;
}

main {
  height: 95vh;
}

#calendarview-container {
  width: 100%;
  height: 100%;
  position: relative;
}

#month-container {
  width: 70%;
  height: 100%;
  position: absolute;
  right: 0;
  padding-top: 0.8rem;
  padding-right: 2rem;
}

table {
  width: 100%;
}

h3 {
  margin: 0 auto;
  width: 50%;
  text-align: center;
}

.week {
  width: 100%;
  height: 20%;
  text-align: center;
}

th {
  font-size: 0.8rem;
  width: 13%;
  border: 2px solid black;
}

td {
  border: 2px solid black;
  position: relative;
  width: 13%;
  height: 300px;
}

.day {
  position: absolute;
  top: 0;
  left: 0;
}

#filter-button {
  margin-top: 10%;
  width: 90%;
  font-size: 0.6rem;
}

nav {
  height: 2.75rem;
}

#nav {
  display: flex;
  justify-content: flex-end;
}

#nav li {
  list-style-type: none;
  padding: 0 0.5rem;
}

.snapshot {
  border: 2px solid black;
  width: 40%;
  padding: 50px 50px;
  margin: 150px 150px;
}

.delete-snapshot {
  float: right;
}

.delete-snapshot {
  cursor: pointer;
}

#nav {
  float: right;
}

.modal-button {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.modal-button:focus {
  outline: 0;
}

.modal-body {
  align-items: flex-start;
  display: flex;
  flex-flow: row wrap;
}

.modal-body div {
  flex: 1 100%;
  text-align: left;
}

.modal-header h5 {
  padding-left: 25px;
}

.modal-header button span {
  padding-right: 15px;
}

.select {
  display: flex;
  align-items: flex-start;
  flex-flow: row wrap;
}

.select div {
  flex: 1 100%;
  text-align: left;
  padding: 10px 0 10px 25px;
}

.select.date div {
  flex: 1 50%;
}

.select span {
  border: 1px solid #ccc;
  border-radius: 0.25rem;
  overflow: hidden;
  background: url('https://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/select-bottom-512.png')
    no-repeat;
  background-size: 40px 40px;
  background-position: right center;
  font-size: 0.8rem;
  margin: 0 0 0 25px;
  padding: 5px 0;
}

.select span select {
  padding: 5px 8px;
  border: none;
  box-shadow: none;
  padding: 0 60px 0 10px;
  background: transparent;
  -webkit-appearance: none;
}

.select.date {
  margin: -20px 0 0px -25px;
}

.select div span {
  padding: 10px 0;
}

#modal-input {
  height: 70px;
  font-size: 0.7rem;
  padding: 0 0.35rem;
  width: 98%;
}

.select.event {
  margin: -10px 0 0 0;
}

.select.end {
  padding: 0 0 25px 0;
}

.col-12 {
  margin: -10px 0 0 0;
}

#filterbar {
  width: 20%;
  position: absolute;
  left: 6%;
  top: 6.5%;
  display: flex;
  flex-direction: column;
}

#filterbar form div {
  font-size: 0.8rem;
}

.filter {
  display: flex;
}

.added-event {
  font-size: 0.4rem;
  width: 100%;
  position: relative;
}

.added-event:hover {
  background-color: yellow;
}

.delete-button {
  cursor: pointer;
  position: absolute;
  right: 5%;
  top: 0;
}

/*div.filter {
  font-size: 0.6rem;
  text-align: left;
  position: relative;
}

div.filter input {
  width: 0.65rem;
  height: 0.65rem;
  position: absolute;
  padding-left: 100px;
  right: 10%;
  top: 25%;
}
*/

